<resources>
    <string name="app_name">LearnTogether</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="play_game">Let\'s go!!!</string>
    <string name="search">Search</string>
    <string name="Sentence_bar">Sentence Bar</string>

    <string name="new_topic">New Topic</string>
    <string name="name_topic">Name Topic</string>
    <string name="enter_name_topic">Enter topic name</string>
    <string name="image_topic">Topic Image</string>
    <string name="selection_image">Select Image</string>
    <string name="topic_describe">Topic Description</string>
    <string name="enter_description_topic">Enter topic description</string>
    <string name="button_save">Save</string>
    <string name="edit_topic">Edit Topic</string>

    <string name="new_card">New Card</string>
    <string name="name_card">Name Card</string>
    <string name="enter_name_card">Enter card name</string>
    <string name="image_card">Card Image</string>

    <string name="edit_card">Edit Card</string>

    <string name="name">Name App: LearnTogether</string>
    <string name="type_app">Type: Education</string>
    <string name="language_app">Language: English, Vietnamese</string>

    <string name="about_app">This is my first product and also my achievement in the ProGAPP competition for D21 of the ProPTIT club. Recognizing the importance of communication education for children, I designed this app to support learning for children who have difficulty in communicating. The app provides some simple features to help children communicate more effectively. The main function of the app is to store images and symbols for children to easily understand and use. You can also use the Sentence Bar feature to create a sentence from a sequence of selected images and pronounce it. Since this is my first product, there may be some errors in the usage process, I hope everyone can overlook them!</string>

    <string name="language">Language</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>

    <string name="notification">Notification</string>
    <string name="isEmptyName">Name cannot be blank</string>
    <string name="isEmptyDescription">Description cannot be blank</string>
</resources>