<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Tiêu đề -->
        <TextView
            android:id="@+id/textViewTitleCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/edit_card"
            android:textStyle="bold"
            android:textSize="36dp"
            android:textColor="#205AA7"/>

        <!-- Tên chủ đề -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#205AA7"
            android:text="@string/name_card" />

        <EditText
            android:id="@+id/etEditNameCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/enter_name_card" />

        <!-- Hình ảnh -->
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#205AA7"
            android:text="@string/image_card" />

        <Button
            android:id="@+id/btnSelectImageCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/selection_image" />

        <!-- Miêu tả -->
        <ImageView
            android:id="@+id/imageViewCard"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/image" />

        <Button
            android:id="@+id/btnSaveCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/button_save" />

    </LinearLayout>
</ScrollView>
